<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/big_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_margin"
        android:hint="@string/input_field_hint"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="@dimen/triple_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/clear_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/divide_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_8"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_9"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_5"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_6"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_2"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_3"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/multiply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divideButton" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/subtract_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multiplyButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtractButton" />

    <Button
        android:id="@+id/button0"
        android:layout_width="@dimen/double_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/dot_button"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/equal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton" />

</androidx.constraintlayout.widget.ConstraintLayout>